# dlmy

./: .gitignore  .travis.yml  LICENSE  MANIFEST  README.md  config_example.ini  dlmy.py  dlmy.sh  main.py  pyproject.toml  setup.py
.vim/: coc-settings.json
dlmy/: __init.py__  __main.py__  __main__.py  colors.py  configuration.py  dlmy.py  download.py  search.py
src/dlmy/: __main__.py  download.py  search.py
