[tool.poetry]
name = "dlmy"
version = "2.2"
description = "Yet another Spotify Downloader ..."
readme = "README.md"
authors = ["yrwq <yrwqid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
youtube_dl = "^2021.1.8"
lxml = "^4.6.2"
configparser = "^5.0.1"
colorama = "^0.4.4"
music-tag = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dlmy = 'dlmy.__main__:main'
